# Emittio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
apps/emittio-client-cli/: Cargo.toml
apps/emittio-client-cli/src/: main.rs
apps/emittio-client-cli/src/commands/: mod.rs  pull.rs  seed.rs  send.rs
core/: Cargo.toml
core/src/: bundles.rs  channels.rs  client.rs  client_service.rs  envelope.rs  id.rs  inbox.rs  main.rs  message.rs  network.rs  node.rs  peer.rs  peer_table.rs  pow.rs  service.rs  session.rs  tag.rs  tag_service.rs  transport.rs  utils.rs
core/src/client/: client.rs  error.rs  mod.rs
core/src/dht/: cid.rs  mod.rs
core/src/dht/routing/: dispatcher.rs  error.rs  mod.rs  service.rs  utils.rs
core/src/dht/storage/: dispatcher.rs  error.rs  service.rs
core/src/net/: client.rs  error.rs  ip.rs  mod.rs  packet.rs  service.rs  session.rs  session_store.rs  types.rs
core/src/net/session/: dispatcher.rs  error.rs  mod.rs  service.rs
core/src/node/: error.rs  mod.rs  service.rs
core/src/payload/: dht.rs  mod.rs  pow.rs  tag.rs
core/src/peer/: dispatcher.rs  service.rs
core/src/tag/: dispatcher.rs  error.rs  mod.rs  service.rs  tag.rs
core/src/transport/: error.rs  mock.rs  mod.rs  tcp.rs
crates/actor/: Cargo.toml
crates/actor-macro/: Cargo.toml
crates/actor-macro/src/: lib.rs
crates/actor/src/: channel.rs  lib.rs
crates/actorify/: Cargo.toml
crates/actorify-macro/: Cargo.toml
crates/actorify-macro/src/: lib.rs
crates/actorify/src/: lib.rs
crates/client/src/: lib.rs  service.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: ciphertext.rs  error.rs  id.rs  kem.rs  lib.rs  sealed.rs  sig.rs
crates/dht/src/: cid.rs  lib.rs
crates/dht/src/routing/: buckets.rs  dispatcher.rs  service.rs
crates/dht/src/storage/: dispatcher.rs  mod.rs
crates/emittio-client/: Cargo.toml
crates/emittio-client/src/: lib.rs
crates/emittio-crypto/: Cargo.toml
crates/emittio-crypto/src/: ciphertext.rs  derivable.rs  id.rs  kem.rs  lib.rs  sig.rs  tag.rs
crates/emittio-dht/: Cargo.toml
crates/emittio-dht/src/: error.rs  lib.rs  query.rs  service.rs
crates/emittio-event/: Cargo.toml
crates/emittio-event/src/: lib.rs
crates/emittio-inbox/: Cargo.toml
crates/emittio-inbox/src/: lib.rs
crates/emittio-message/: Cargo.toml
crates/emittio-message/src/: client.rs  types.rs
crates/emittio-network/: Cargo.toml  README.md
crates/emittio-network/docs/: ARCHITECTURE.md
crates/emittio-network/src/: actor.rs  error.rs  lib.rs  peer.rs  query.rs  reply.rs  session.rs  transport.rs  types.rs  verifier.rs
crates/emittio-network/src/old_transport/: tcp.rs
crates/emittio-network/src/payload/: mod.rs  test.rs
crates/emittio-pointer/: Cargo.toml
crates/emittio-pointer/src/: lib.rs  query.rs  service.rs  types.rs  utils.rs
crates/message/: Cargo.toml
crates/message/src/: client.rs  types.rs
crates/net/: Cargo.toml  README.md
crates/net/docs/: ARCHITECTURE.md
crates/net/src/: _client.rs  _session.rs  error.rs  lib.rs  manager.rs  message.rs  packet.rs  peer.rs  service.rs  session.rs
crates/net/src/old_transport/: controls.rs
crates/net/src/payload/: dht.rs  mod.rs  test.rs
crates/net/src/session/: session.rs
crates/net/src/transport/: controls.rs  error.rs  mock.rs  mod.rs  participant.rs  tcp.rs
crates/node/src/: dispatcher.rs
crates/peer/src/: error.rs  lib.rs  peer.rs  service.rs
crates/pointer/: Cargo.toml
crates/pointer/src/: client.rs  lib.rs  types.rs
crates/service/: Cargo.toml
crates/service/src/: channel.rs  lib.rs
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/subscribe/: route.ts
web/app/contact/: page.tsx
web/app/privacy/: page.tsx
web/components/: Donate.tsx  JoinWaitlist.tsx
web/components/elements/: Description.tsx  DottedBg.tsx  Explanation.tsx  Footer.tsx  Header.tsx  Heading.tsx  JoinWaitlistButton.tsx  MeteorsBg.tsx  MorphingTransition.tsx  Subheading.tsx  ThemeToggler.tsx  TypingAnimation.tsx  ViewOnGitHub.tsx
web/components/icons/: Alias.tsx  Aliases.tsx  Code.tsx  EyeOff.tsx  Incognito.tsx  Lock.tsx  MailLock.tsx  Mailbox.tsx  NetworkNode.tsx  NoAccount.tsx  Passkey.tsx  SearchX.tsx  ThumbUp.tsx
web/components/images/: Explanation.tsx  Logo.tsx  LogoLarge.tsx
web/components/sections/: CTA.tsx  Comparison.tsx  Difference.tsx  FAQ.tsx  Features.tsx  FirstCta.tsx  Footer.tsx  Header.tsx  Hero.tsx  How.tsx  HowItWorks.tsx  Principles.tsx  SecondCta.tsx  Why.tsx
