[workspace.package]
name = "Emittio"
version = "0.1.0"
description = "Private by design, decentralized and seamless mail."
authors = ["efimio16"]
license = "GPL-3.0"
repository = "https://github.com/efimio16/Emittio"
homepage = "https://emittio.vercel.app/"
readme = "README.md"

[workspace]
resolver = "3"
members = [
    "crates/emittio-client",
    "crates/emittio-crypto",
    "crates/emittio-event",
    "crates/emittio-message",
    # "crates/dht",
    "crates/emittio-network",
    "crates/emittio-pointer",
    # "crates/node",
    # "crates/peer",
    "crates/actorify",
    "crates/actorify-macro",
    "crates/emittio-inbox",
    "apps/emittio-client-cli",
    "crates/emittio-dht",
]
