[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
zeroize = "1.8.2"
hkdf = "0.12.4"
sha2 = "0.10.9"
serde = "1.0.228"
pqc_kyber = { version = "0.7.1", features = ["std"] }
rand_chacha = "0.3.1"
pqc_dilithium_edit = "0.2.0"
