[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
zeroize = "1.8.2"
hkdf = "0.12.4"
sha2 = "0.10.9"
pqc_kyber = { version = "0.7.1", features = ["std", "kyber512"] }
rand_chacha = "0.3.1"
pqc_dilithium_edit = "0.2.0"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["sync", "rt", "macros", "rt-multi-thread", "time", "fs", "io-util"] }
bytes = { version = "1.11.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
heapless = "0.9.2"
tokio-macros = "2.6.0"
aes-gcm = { version= "0.10.3", features = ["rand_core"] }
tokio-util = "0.7.17"
thiserror = "2.0.17"
