[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

panic = "abort"

[dependencies]
aes-gcm = { version="0.10.3", features=["std"] }
blake3 = "1.8.3"
bytes = { version="1.11.1", features=["serde"] }
ed25519-dalek = { version="2.2.0", features=["rand_core", "serde"] }
pqc_dilithium_edit = "0.2.0"
pqc_kyber = { version = "0.7.1", features = ["std", "kyber512"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
thiserror = "2.0.18"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
