[package]
name = "emittio-dht"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
emittio-crypto = { version = "0.1.0", path = "../emittio-crypto" }
emittio-network = { version = "0.1.0", path = "../emittio-network" }
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["fs"], optional = true }

[features]
default = []
node = ["dep:tokio"]
