[package]
name = "emittio-network"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
emittio-crypto = { version = "0.1.0", path = "../emittio-crypto" }
postcard = { version = "1.0", features = ["alloc", "use-std"] }
rand = "0.8.5"
serde = "1.0.228"
serde-big-array = "0.5.1"
actorify = { version = "0.1.0", path = "../actorify" }
thiserror = "2.0.18"
tokio = { version="1.48.0", features=["io-util", "macros"] }
tokio-util = { version = "0.7.17", features = ["join-map", "rt"] }
tokio-stream = "0.1.18"

[features]
default = []
tcp = ["tokio/net"]
